--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,34 @@
 	</dependencies>
 
 	<build>
+	    <finalName>mvc-tests</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			  <groupId>com.spotify</groupId>
+			  <artifactId>dockerfile-maven-plugin</artifactId>
+			  <version>1.4.0</version>
+			  <configuration>
+			    <repository>ravirajk1007/${project.artifactId}</repository>
+			    <tag>${project.version}</tag>
+			    <buildargs>
+			    	<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+			    </buildargs>
+			  </configuration>
+			  <executions>
+			    <execution>
+			    <id>default</id>
+			    <phase>install</phase>
+			      <goals>
+			        <goal>build</goal>
+			        <goal>push</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
