added stage for build and pushing docker image

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 			    	<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 			    </buildargs>
 			  </configuration>
-			  <executions>
+			  <!-- <executions>
 			    <execution>
 			    <id>default</id>
 			    <phase>install</phase>
@@ -71,7 +71,7 @@
 			        <goal>push</goal>
 			      </goals>
 			    </execution>
-			  </executions>
+			  </executions> -->
 			</plugin>
 		</plugins>
 	</build>
